// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders badge in bottom left corner 1`] = `
<View>
  <View>
    Text
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#ff4081",
        "borderRadius": 6,
        "bottom": -6,
        "left": -6,
        "opacity": 1,
        "paddingHorizontal": 6,
        "position": "absolute",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "Helvetica Neue",
            "textAlign": "left",
            "writingDirection": "ltr",
          },
          Object {
            "color": "#000000",
          },
        ]
      }
    >
      3
    </Text>
  </View>
</View>
`;

exports[`renders badge in bottom right corner 1`] = `
<View>
  <View>
    Text
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#ff4081",
        "borderRadius": 6,
        "bottom": -6,
        "opacity": 1,
        "paddingHorizontal": 6,
        "position": "absolute",
        "right": -6,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "Helvetica Neue",
            "textAlign": "left",
            "writingDirection": "ltr",
          },
          Object {
            "color": "#000000",
          },
        ]
      }
    >
      3
    </Text>
  </View>
</View>
`;

exports[`renders badge in different color 1`] = `
<View>
  <View>
    Text
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#f44336",
        "borderRadius": 6,
        "opacity": 1,
        "paddingHorizontal": 6,
        "position": "absolute",
        "right": -6,
        "top": -6,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "Helvetica Neue",
            "textAlign": "left",
            "writingDirection": "ltr",
          },
          Object {
            "color": "#ffffff",
          },
        ]
      }
    >
      3
    </Text>
  </View>
</View>
`;

exports[`renders badge in different size 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ff4081",
      "borderRadius": 6,
      "opacity": 1,
      "paddingHorizontal": 6,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "Helvetica Neue",
          "textAlign": "left",
          "writingDirection": "ltr",
        },
        Object {
          "color": "#000000",
        },
      ]
    }
  >
    3
  </Text>
</View>
`;

exports[`renders badge in top left corner 1`] = `
<View>
  <View>
    Text
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#ff4081",
        "borderRadius": 6,
        "left": -6,
        "opacity": 1,
        "paddingHorizontal": 6,
        "position": "absolute",
        "top": -6,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "Helvetica Neue",
            "textAlign": "left",
            "writingDirection": "ltr",
          },
          Object {
            "color": "#000000",
          },
        ]
      }
    >
      3
    </Text>
  </View>
</View>
`;

exports[`renders badge in top right corner 1`] = `
<View>
  <View>
    Text
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#ff4081",
        "borderRadius": 6,
        "opacity": 1,
        "paddingHorizontal": 6,
        "position": "absolute",
        "right": -6,
        "top": -6,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#000000",
            "fontFamily": "Helvetica Neue",
            "textAlign": "left",
            "writingDirection": "ltr",
          },
          Object {
            "color": "#000000",
          },
        ]
      }
    >
      3
    </Text>
  </View>
</View>
`;

exports[`renders no badge 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ff4081",
      "borderRadius": 6,
      "opacity": 0,
      "paddingHorizontal": 6,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "Helvetica Neue",
          "textAlign": "left",
          "writingDirection": "ltr",
        },
        Object {
          "color": "#000000",
        },
      ]
    }
  />
</View>
`;

exports[`renders numeric badge 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ff4081",
      "borderRadius": 6,
      "opacity": 1,
      "paddingHorizontal": 6,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
          "fontFamily": "Helvetica Neue",
          "textAlign": "left",
          "writingDirection": "ltr",
        },
        Object {
          "color": "#000000",
        },
      ]
    }
  >
    3
  </Text>
</View>
`;
